@@ -1,7 +1,14 @@
+2016-12-05 Albert Chu <chu11@llnl.gov>
+
+	Support IPv6 addresses in FreeIPMI
+
+	* common/miscutil/fi_hostlist.h, common/miscutil/fi_hostlist.c:
+	New files.  Wrapper around hostlist.[ch].
+	
 2017-01-13 Albert Chu <chu11@llnl.gov>
 
 	* man/bmc-config.conf.5: Fix pointer of correct manpage.
-	
+
 2016-12-22 Albert Chu <chu11@llnl.gov>
 
 	* libfreeipmi/api/ipmi-api.c (_setup_hostname): Fix cleanup path
